Remove Java 16 workarounds